--- a/app/views/hh_forms/new.html.haml
+++ b/app/views/hh_forms/new.html.haml
@@ -1,5 +1,4 @@
 .container
-	= @hhform.inspect
 	= form_for @hhform do |f|
 		.row
 			.col_two_third.testimonial
@@ -7,8 +6,8 @@
 				%strong For your information:
 				%p An accurate health history is important to ensure that it is safe for you to receive a massage treatment. If your health status changes in the future, please let me know. All information gathered for this treatment is confidential except as required or allowed by law or except to facilitate diagnosis (assessment) or treatment. You will be asked to provide written authorization for release of any information.
 				- if flash[:notice]
-					= @hhform[:smoke]
-					#notice.message= flash[:notice]
+					- flash[:notice].each do |notice|
+						#notice.t600.color.center= notice
 				- if flash[:warning]
 					#warning.message= flash[:warning]
 
