--- a/app/views/hh_forms/new.html.haml
+++ b/app/views/hh_forms/new.html.haml
@@ -1,298 +1,9 @@
 .container
-	= form_for @hhform do |f|
-		.row
-			.col_two_third.testimonial
-				%h3 Health History Form
-				%strong For your information:
-				%p An accurate health history is important to ensure that it is safe for you to receive a massage treatment. If your health status changes in the future, please let me know. All information gathered for this treatment is confidential except as required or allowed by law or except to facilitate diagnosis (assessment) or treatment. You will be asked to provide written authorization for release of any information.
-				- if flash[:notice]
-					- flash[:notice].each do |notice|
-						#notice.t600.color.center= notice
-				- if flash[:warning]
-					#warning.message= flash[:warning]
-
-		-# name
-		.row
-			.col_one_third.testimonial
-				= f.label :first_name, "First Name"
-				= f.text_field :first_name, :class => "form-control"
-				%br
-				= f.label :last_name, "Last Name"
-				= f.text_field :last_name, :class => "form-control"
-				%br
-				= f.label :address_1, "Address 1"
-				= f.text_field :address_1, :class => "form-control"
-				%br
-				= f.label :address_2, "Address 2"
-				= f.text_field :address_2, :class => "form-control"
-				%br
-				= f.label :city, "City"
-				= f.text_field :city, :class => "form-control"
-				%br
-				= f.label :provance, "Provance"
-				= f.text_field :provance, :class => "form-control"
-				%br
-				= f.label :postal_code, "Postal Code"
-				= f.text_field :postal_code, :class => "form-control"
-			.col_one_third.testimonial
-				= f.label :email, "Email"
-				= f.text_field :email , :class => "form-control"
-				%br
-				= f.label :phone, "Phone"
-				= f.text_field :phone, :class => "form-control"
-				%br
-				= f.label :occupation, "Occupation"
-				= f.text_field :occupation, :class => "form-control"
-				%br
-				= f.label :referral_source, "Who Reffered You?"
-				= f.text_field :referral_source, :class => "form-control"
-				%br
-				= f.label :physician, "Physicians Name"
-				= text_field :hhform, :physician, :class => "form-control"
-				%br
-				= f.label :physician_address, "Physician Address"
-				= text_field :hhform, :physician_address, :class => "form-control", :class => "form-control"				
-				%br				
-				= f.label :date_of_birth, "Date of Birth"
-				%br
-				= f.date_select :date_of_birth, :start_year => 1925, :html_options => {:class => "form-control"}
-		
-		.row
-			-# complaints and massage history
-			.col_one_third.testimonial
-				= f.label :primary_complaint, "Primary Complaint", class: 'nobottommargin'
-				%p.nobottommargin (Reason for seeking massage as a treatment)
-				= f.text_field :primary_complaint, :class => "form-control"
-
-				= f.label :secondary_complaint, "Secondary Complaint"
-				= f.text_field :secondary_complaint, :class => "form-control"
-
-				= f.label :sports, "Sports", class: 'nobottommargin'
-				%p.nobottommargin (What physical activities are you involved in?)			
-				= f.text_area :sports, :class => "form-control", :rows => "3"
-				%br
-			-# general health
-			.col_one_third.testimonial
-				= f.label :previous_massage_note, "Previous Massage Treatments", class: 'nobottommargin'
-				%p.nobottommargin (Discribe previous massage treatments, if any)
-				= f.text_area :previous_massage_note, :class => "form-control", :rows => "3"
-				%br
-				= f.check_box :smoke
-				= f.label :smoke, "Do you smoke?"
-		-# check boxes
-		.row
-			.col_two_third.testimonial
-				%h4.nobottommargin Please indicate conditions you are or have experienced:
-		.row
-			.col_one_third
-				.testimonial
-					%h4 Respiratory
-					= f.check_box :chronic_cough
-					= f.label :chronic_cough, "chronic cough"
-					%br
-					= f.check_box :shortness_of_breath
-					= f.label :shortness_of_breath, "shortness of breath"
-					%br
-					= f.check_box :bronchitis
-					= f.label :bronchitis, "bronchitis"
-					%br
-					= f.check_box :asthma
-					= f.label :asthma, "asthma"
-					%br
-					= f.check_box :emphysema
-					= f.label :emphysema, "emphysema"
-				.testimonial
-					%h4 Infections
-					= f.check_box :hepatitis
-					= f.label :hepatitis, "hepatitis"
-					%br
-					= f.check_box :infectious_skin_condition
-					= f.label :infectious_skin_condition, "infectious skin condition"
-					%br
-					= f.check_box :tb
-					= f.label :tb, "tb"
-					%br
-					= f.check_box :hiv
-					= f.label :hiv, "hiv"
-				.testimonial	
-					%h4 Other Conditions
-					= f.check_box :loss_of_sensation
-					= f.label :loss_of_sensation, "loss of sensation"
-					%br
-					= f.check_box :diabetes
-					= f.label :diabetes, "diabetes"
-					%br
-					= f.label :diabetes_onset, "Diabetes onset"
-					%br
-					= f.date_select :diabetes_onset, :start_year => 1925, :html_options => {:class => "form-control"}					
-					%br
-					%br
-					= f.check_box :allergies
-					= f.label :allergies, "allergies"
-					%br
-					= f.check_box :epilepsy
-					= f.label :epilepsy, "epilepsy"
-					%br
-					= f.check_box :cancer
-					= f.label :cancer, "cancer"
-					%br
-					= f.check_box :arthritis
-					= f.label :arthritis, "arthritis"
-					%br
-					= f.check_box :digestive_conditions
-					= f.label :digestive_conditions, "digestive conditions"
-					%br
-					= f.check_box :osteoporosis
-					= f.label :osteoporosis, "osteoporosis"
-					%br
-			.col_one_third.col_last
-				.testimonial
-					%h4 Cardiovascular
-					= f.check_box :high_bp
-					= f.label :high_bp, "high blood pressure"
-					%br
-					= f.check_box :low_bp
-					= f.label :low_bp, "low blood pressure"
-					%br
-					= f.check_box :cchf
-					= f.label :cchf, "cchf"
-					%br
-					= f.check_box :heat_attack
-					= f.label :heat_attack, "heat attack"
-					%br
-					= f.check_box :phlebitis
-					= f.label :phlebitis, "phlebitis"
-					%br
-					= f.check_box :stroke_CVA
-					= f.label :stroke_CVA, "stroke CVA"
-					%br
-					= f.check_box :pacemaker
-					= f.label :pacemaker, "pacemaker"
-					%br
-					= f.check_box :heart_disease
-					= f.label :heart_disease, "heart disease"
-					%br
-				.testimonial
-					%h4 Head and Neck
-					= f.check_box :vision_problems
-					= f.label :vision_problems, "vision problems"
-					%br
-					= f.check_box :vision_loss
-					= f.label :vision_loss, "vision loss"
-					%br
-					= f.check_box :ear_problems
-					= f.label :ear_problems, "ear problems"
-					%br
-					= f.check_box :hearing_loss
-					= f.label :hearing_loss, "hearing loss"
-					%br
-				.testimonial
-					%h4.nobottommargin Skin
-					= f.check_box :skin_condition
-					= f.label :skin_condition, "skin condition"					
-				.testimonial
-					%h4 Women
-					= f.check_box :pregnant
-					= f.label :pregnant, "pregnant"
-					%br
-					= f.label :pregnant_due_date, "Due Date"
-					%br
-					= f.date_select :pregnant_due_date, :start_year => 2016, :class => "form-control"
-		.row
-			.col_two_third.testimonial
-				%h4.nobottommargin Describe any pains or discomforts you are currently experiencing:
-		-# Head Neck and shoulders
-		.row
-			.col_one_third.testimonial
-				= f.check_box :neck
-				= f.label :neck, "neck"
-				= f.text_area :neck_note, :class => "form-control"
-
-				= f.check_box :low_back
-				= f.label :low_back, "low_back"	
-				= f.text_area :low_back_note, :class => "form-control"
-
-				= f.check_box :mid_back
-				= f.label :mid_back, "mid_back"		
-				= f.text_area :mid_back_note, :class => "form-control"
-				= f.check_box :upper_back
-				= f.label :upper_back, "upper_back"
-				= f.text_area :upper_back_note, :class => "form-control"
-
-				= f.check_box :shoulders
-				= f.label :shoulders, "shoulders"
-				= f.text_area :shoulders_note, :class => "form-control"
-
-			.col_one_third.testimonial 	 
-				= f.check_box :arms
-				= f.label :arms, "arms"
-				= f.text_area :arms_note, :class => "form-control"
-
-				= f.check_box :legs
-				= f.label :legs, "legs"
-				= f.text_area :legs_note, :class => "form-control"
-
-				= f.check_box :knees
-				= f.label :knees, "knees"
-				= f.text_area :knees_note, :class => "form-control"
-
-				= f.check_box :other
-				= f.label :other, "other"
-				= f.text_area :other_note, :class => "form-control"
-
-
-
-		.row
-			.col_two_third.testimonial
-				%h4 Please fill out any other relevant health information you can:
-		.row
-			.col_one_third.testimonial
-				= f.label :current_medications, "Current Medications", class: 'nobottommargin'
-				%p.nobottommargin (List any medications you are currently taking and what they are used for)
-				= f.text_area :current_medications, :class => "form-control"
-				%br
-				= f.label :surgery, "Surgeries", class: 'nobottommargin'
-				%p.nobottommargin (Discribe any relevant surgies including dates)
-				= f.text_area :surgery, :class => "form-control"
-				%br
-				= f.label :general_health_status, "General Health Status"
-				= f.text_field :general_health_status, :class => "form-control"
-				%br
-				= f.label :other_healthcare_list, "Other Healthcare", class: 'nobottommargin'
-				%p.nobottommargin (Discribe healthcare you are curently involved in or have tried in the past, e.g. Chiropratic, Physiotherapy, Accupuncture...)
-				= f.text_area :other_healthcare_list, :class => "form-control"
-			.col_one_third.testimonial
-				= f.label :injuries, "Injuries", class: 'nobottommargin'
-				%p.nobottommargin (Discribe any relevant injuries including dates)
-				= f.text_area :injuries, :class => "form-control"
-				%br
-				= f.label :mental_condition_note, "Mental Conditions"
-				= f.text_field :mental_condition_note, :class => "form-control"
-				%br
-				= f.label :other_medical_conditions, "Other Medical Conditions", class: 'nobottommargin'
-				%p.nobottommargin (e.g. digestive conditions, gynaecological conditions, hemophilia, etc.)
-				= f.text_area :other_medical_conditions, :class => "form-control"
-				%br
-				= f.label :special_notes, "Special Notes", class: 'nobottommargin'
-				%p.nobottommargin (presence of internal pins, wires, artificial joints, special equipment)
-				= f.text_area :special_notes, :class => "form-control"
-		
-		.row
-			.col_two_third.testimonial
-				%h5 Informed Concent for Massage Tharapy:
-				%p I understand that the Registered Massage Therapist is providing massage therapy services within their scope of practice as defined by the College of Massage Therapists of Ontario (CMTO). 
-				%p I hereby consent for my therapist to treat me with massage therapy for the above noted purposes including such assessments, examinations and techniques, which may be recommended, by my therapist.
-				%p I acknowledge that the therapist is not a physician and does not diagnose illness or disease or any other physical or mental disorder. I clearly understand that massage therapy is not a substitute for a medical examination. It is recommended that I attend my personal physician for any ailments that I may be experiencing. I acknowledge that no assurance or guarantee has been provided to me as to the  esults of the treatment. I acknowledge that with any treatment there can be risks and those risks have been explained to me and I assume those risks.
-				%p I acknowledge and understand that the therapist must be fully aware of my existing medical conditions. I have completed my medical history form as provided by my therapist and disclosed to the therapist all of those medical conditions affecting me. The information I have provided is true and complete to the best of my knowledge.
-				%p I have read the above noted consent and I will question my therapist on the contents and my therapy. By signing this form, I confirm my consent to treatment and intend this consent to cover the treatment discussed with me and such additional treatment as proposed by my therapist from time to time, to deal with my physical condition and for which I have sought treatment. I understand that at any time I may withdraw my consent and treatment will be stopped. 
-				%p I understand the cancellation policy, and that I must provide at least 24 hours notice of cancellation of an appointment. I understand that I may be charged the full fee for a missed appointment if proper cancellation notification is not provided to the clinic. 
-				.col_two_fifth
-					= f.label :confirm_name, "Name"
-					= f.text_field :confirm_name, :class => "form-control"
-					= f.label :confirm_email, "email"
-					= f.text_field :confirm_email, :class => "form-control"
-					%br
-					= f.submit "Submit Form", class: "btn btn-danger"
-				.col_one_third
-					%br
-					%strong Please enter your name and email address that you used in the form to confirm you have read, understand and agree to the above statments.
+	= form_for @hhform, :remote => true do |f|
+		=render partial: 'new_title', locals: {f: f}
+		=render partial: 'new_contact', locals: {f: f}
+		=render partial: 'new_complaints', locals: {f: f}
+		=render partial: 'new_checkboxes', locals: {f: f}
+		=render partial: 'new_pains', locals: {f: f}
+		=render partial: 'new_other', locals: {f: f}
+		=render partial: 'new_concent', locals: {f: f}
