--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,25 @@
 <!DOCTYPE html><html lang=en-US>
 <head>
-<meta http-equiv=content-type content="text/html; charset=utf-8"><link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel=stylesheet type=text/css><link rel=stylesheet href=/css/bootstrap.css type=text/css><link rel=stylesheet href=/style.css type=text/css><link rel=stylesheet href=/css/dark.css type=text/css><link rel=stylesheet href=/css/font-icons.css type=text/css><link rel=stylesheet href=/css/animate.css type=text/css><link rel=stylesheet href=/css/magnific-popup.css type=text/css><link rel=stylesheet href=/css/responsive.css type=text/css><link rel=stylesheet href=/css/colors.css type=text/css><link rel=stylesheet href=/css/travel.css type=text/css><link rel=stylesheet href=/css/ie10_no_paralax.css type=text/css><meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1"><script type=text/javascript src=/js/jquery.js></script><script type=text/javascript src=/js/plugins.js></script><title>KWmassage | About</title><meta name=description content="Meet Jeremy Bissonnette registered massage therapist"><meta name=keywords content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy"><meta name=author content="Jeremy Bissonnette, Registered Massage Therapist">
+<%= javascript_include_tag "application" %>
+<meta http-equiv=content-type content="text/html; charset=utf-8">
+<link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel=stylesheet type=text/css>
+<link rel=stylesheet href=/css/bootstrap.css type=text/css>
+<link rel=stylesheet href=/style.css type=text/css>
+<link rel=stylesheet href=/css/dark.css type=text/css>
+<link rel=stylesheet href=/css/font-icons.css type=text/css>
+<link rel=stylesheet href=/css/animate.css type=text/css>
+<link rel=stylesheet href=/css/magnific-popup.css type=text/css>
+<link rel=stylesheet href=/css/responsive.css type=text/css>
+<link rel=stylesheet href=/css/colors.css type=text/css>
+<link rel=stylesheet href=/css/travel.css type=text/css>
+<link rel=stylesheet href=/css/ie10_no_paralax.css type=text/css>
+<meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1">
+<script type=text/javascript src=/js/jquery.js></script>
+<script type=text/javascript src=/js/plugins.js></script>
+<title>KWmassage | About</title>
+<meta name=description content="Meet Jeremy Bissonnette registered massage therapist">
+<meta name=keywords content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy">
+<meta name=author content="Jeremy Bissonnette, Registered Massage Therapist">
 <%= csrf_meta_tags %>
 </head>
 
