--- a/app/views/hh_forms/_new_contact.html.haml
+++ b/app/views/hh_forms/_new_contact.html.haml
@@ -43,4 +43,4 @@
 		%br
 		= f.date_select :date_of_birth, :start_year => 1925, :html_options => {:class => "form-control"}
 		%br
-		= link_to 'Continue', update_hh_form_path, remote: true
+		= link_to 'Continue', new_hh_form_path, remote: true
