--- a/app/views/hh_forms/_new_complaints.html.haml
+++ b/app/views/hh_forms/_new_complaints.html.haml
@@ -1,4 +1,4 @@
-.row
+.row{:id => 'complaints'}
 	-# complaints and massage history
 	.col_one_third.testimonial
 		= f.label :primary_complaint, "Primary Complaint", class: 'nobottommargin'
