--- a/app/views/hh_forms/_new_concent.html.haml
+++ b/app/views/hh_forms/_new_concent.html.haml
@@ -1,4 +1,4 @@
-.row
+.row{:id => 'concent'}
 	.col_two_third.testimonial
 		%h5 Informed Concent for Massage Tharapy:
 		%p I understand that the Registered Massage Therapist is providing massage therapy services within their scope of practice as defined by the College of Massage Therapists of Ontario (CMTO). 
