addButton state not defind

--- a/app/views/hh_forms/_new_contact.html.haml
+++ b/app/views/hh_forms/_new_contact.html.haml
@@ -42,3 +42,5 @@
 		= f.label :date_of_birth, "Date of Birth"
 		%br
 		= f.date_select :date_of_birth, :start_year => 1925, :html_options => {:class => "form-control"}
+		%br
+		#put_contact_button_here
