var hhForm | renders complaints

--- a/app/views/hh_forms/_new_checkboxes.html.haml
+++ b/app/views/hh_forms/_new_checkboxes.html.haml
@@ -117,3 +117,5 @@
 				= f.label :pregnant_due_date, "Due Date"
 				%br
 				= f.date_select :pregnant_due_date, :start_year => 2016, :class => "form-control"
+				%br
+				#put_contact_button_here
