--- a/app/views/hh_forms/_new_other.html.haml
+++ b/app/views/hh_forms/_new_other.html.haml
@@ -33,3 +33,5 @@
 			= f.label :special_notes, "Special Notes", class: 'nobottommargin'
 			%p.nobottommargin (presence of internal pins, wires, artificial joints, special equipment)
 			= f.text_area :special_notes, :class => "form-control"
+			%br
+			#put_contact_button_here
