--- a/app/views/hh_forms/_new_pains.html.haml
+++ b/app/views/hh_forms/_new_pains.html.haml
@@ -40,4 +40,5 @@
 			= f.check_box :other
 			= f.label :other, "other"
 			= f.text_area :other_note, :class => "form-control"
-
+			%br
+			#put_contact_button_here
