visabilityFilter seperate object, navigates back and forth, adds extra buttons on back

--- a/app/views/hh_forms/_new_checkboxes.html.haml
+++ b/app/views/hh_forms/_new_checkboxes.html.haml
@@ -118,4 +118,4 @@
 				%br
 				= f.date_select :pregnant_due_date, :start_year => 2016, :class => "form-control"
 				%br
-				#put_contact_button_here
+				#put_button_here
