--- a/app/views/hh_forms/_new_concent.html.haml
+++ b/app/views/hh_forms/_new_concent.html.haml
@@ -13,6 +13,8 @@
 			= f.label :confirm_email, "email"
 			= f.text_field :confirm_email, :class => "form-control"
 			%br
+			%br
+			#put_button_here			
 			= f.submit "Submit Form", class: "btn btn-danger"
 		.col_one_third
 			%br
