--- a/app/views/hh_forms/_new_other.html.haml
+++ b/app/views/hh_forms/_new_other.html.haml
@@ -34,4 +34,4 @@
 			%p.nobottommargin (presence of internal pins, wires, artificial joints, special equipment)
 			= f.text_area :special_notes, :class => "form-control"
 			%br
-			#put_contact_button_here
+			#put_button_here
