--- a/app/views/hh_forms/_new_pains.html.haml
+++ b/app/views/hh_forms/_new_pains.html.haml
@@ -41,4 +41,4 @@
 			= f.label :other, "other"
 			= f.text_area :other_note, :class => "form-control"
 			%br
-			#put_contact_button_here
+			#put_button_here
