setPageNumber if not valid

--- a/app/views/hh_forms/new.html.haml
+++ b/app/views/hh_forms/new.html.haml
@@ -1,4 +1,5 @@
 .container{:id => 'hh_form'}
+	#put_error_messages_here
 	= form_for @hhform, :remote => true do |f|
 		#form_partials
 			=render partial: 'new_contact', locals: {f: f}
