error messages adding to page Zero

--- a/app/views/hh_forms/_new_checkboxes.html.haml
+++ b/app/views/hh_forms/_new_checkboxes.html.haml
@@ -2,6 +2,7 @@
 	.row
 		.col_two_third.testimonial
 			%h4.nobottommargin Please indicate conditions you are or have experienced:
+			#hh_error_message_place_holder
 	.row
 		.col_one_third
 			.testimonial
