--- a/app/views/hh_forms/_new_contact.html.haml
+++ b/app/views/hh_forms/_new_contact.html.haml
@@ -9,6 +9,7 @@
 					#notice.t600.color.center= notice
 			- if flash[:warning]
 				#warning.message= flash[:warning]
+			#hh_error_message_place_holder
 	.row
 		.col_one_third.testimonial
 			= f.label :first_name, "First Name"
