--- a/app/views/hh_forms/_new_other.html.haml
+++ b/app/views/hh_forms/_new_other.html.haml
@@ -2,6 +2,7 @@
 	.row
 		.col_two_third.testimonial
 			%h4 Please fill out any other relevant health information you can:
+			#hh_error_message_place_holder
 	.row
 		.col_one_third.testimonial
 			= f.label :current_medications, "Current Medications", class: 'nobottommargin'
