--- a/app/views/hh_forms/_new_pains.html.haml
+++ b/app/views/hh_forms/_new_pains.html.haml
@@ -2,6 +2,7 @@
 	.row
 		.col_two_third.testimonial
 			%h4.nobottommargin Describe any pains or discomforts you are currently experiencing:
+			#hh_error_message_place_holder
 	-# Head Neck and shoulders
 	.row
 		.col_one_third.testimonial
