--- a/app/views/hh_forms/_new_complaints.html.haml
+++ b/app/views/hh_forms/_new_complaints.html.haml
@@ -1,5 +1,8 @@
 .row{:id => 'complaints'}
-	#hh_error_message_place_holder
+
+	.col_two_third.testimonial
+		%h4.nobottommargin Please describe the ailments you are seeking massage therapy for
+		#hh_error_message_place_holder
 	-# complaints and massage history
 	.col_one_third.testimonial
 		= f.label :primary_complaint, "Primary Complaint", class: 'nobottommargin'
